2003-11-19  Lluis Sanchez Gual <lluis@ximian.com>

	* InternalRemotingServices.cs: Added missing attributes.
	  
2003-11-17  Lluis Sanchez Gual <lluis@ximian.com>

	* InternalRemotingServices.cs: Added CLSCompliant to SetServerIdentity
	  (MethodCall is not compliant)
	* IObjectHandle.cs: Set correct value for Guid.
	
2003-11-16  Lluis Sanchez Gual <lluis@ximian.com>

	* IObjectHandle.cs, ObjectHandle.cs: Added missing attributes.
	* RemotingConfiguration.cs: GetRegisteredActivatedClientTypes made public.
	  Declared CustomErrorsEnabled() method.
	* RemotingServices.cs: Implemented GetSessionIdForMethodMessage().
	  IsAsyncMessage must be internal.
	* InternalRemotingServices.cs: Added.

2003-11-13  Lluis Sanchez Gual <lluis@ximian.com>

	* RemotingServices.cs: Add ".rem" suffix to generated uri names.

2003-11-12  Lluis Sanchez Gual <lluis@ximian.com>

	* RemotingConfiguration.cs: Implemented all remaining functionality.
	* ActivatedClientTypeEntry.cs: Set the value of ObjectType in the constructor
	* ActivatedServiceTypeEntry.cs, WellKnownClientTypeEntry.cs,
	  WellKnownServiceTypeEntry.cs: Check that the provided type is valid.

2003-11-11  Lluis Sanchez Gual <lluis@ximian.com>

	* RemotingConfiguration.cs: Added initial implementation of Configure method
	  by Jaime Anguiano.

2003-11-11  Lluis Sanchez Gual <lluis@ximian.com>

	* ActivatedClientTypeEntry.cs, ActivatedServiceTypeEntry.cs, 
	  IRemotingTypeInfo.cs, RemotingServices.cs, WellKnownServiceTypeEntry.cs:
	  Removed some TODOs.

2003-11-01  Zoltan Varga  <vargaz@freemail.hu>

	* RemotingServices.cs (GetDomainProxy): Use the new InvokeInDomain 
	function instead of calling SetDomain.

2003-10-23  Lluis Sanchez Gual <lluis@ximian.com>

	* RemotingServices.cs: Do not create an identity for an object if it
	  already has one.

2003-10-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RemotingServices.cs: (NewUri) use Interlocked.Increment on next_id.

2003-10-09  Lluis Sanchez Gual <lluis@ximian.com>
